--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Quicksand:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Quicksand:wght@300..700&display=swap");
 @import "tailwindcss";
 
 @theme {
-    --font-league-spartan:"League Spartan", sans-serif;
-    --font-quicksand: "Quicksand", sans-serif;
+  --font-league-spartan: "League Spartan", sans-serif;
+  --font-quicksand: "Quicksand", sans-serif;
 
-    --color-background: #FFFCF2;
-    --color-background-hero: #F6F2E7;
-    --color-alice-blue: #EEF1E7;
-    --color-button-green:#648A65;
+  --color-background: #fffcf2;
+  --color-background-hero: #f6f2e7;
+  --color-alice-blue: #eef1e7;
+  --color-button-green: #648a65;
 }
