chore: add new color variable to index.css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,5 +8,6 @@
   --color-background: #fffcf2;
   --color-background-hero: #f6f2e7;
   --color-alice-blue: #eef1e7;
+  --color-alice-blue-dark: #d7ddcb;
   --color-button-green: #648a65;
 }
